@@ -7,9 +7,10 @@ sbuild (0.57.3-1) unstable; urgency=low
   * Handle version provides correctly, by using "~*=PROVIDED=*=" in place
     of "=*=PROVIDED=*=" as the package version (Closes: #395271).  Thanks
     to Niko Tyni for this patch.
-  * 
+  * Don't include epoch version in directory names (Closes: #482456).
+    Thanks to Raphael Hertzog.
 
- -- Roger Leigh <rleigh@debian.org>  Sun, 25 May 2008 21:48:33 +0100
+ -- Roger Leigh <rleigh@debian.org>  Sun, 25 May 2008 22:42:49 +0100
 
 sbuild (0.57.2-1) unstable; urgency=low
 
